[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/menu.png" type="Texture" id=1]
[ext_resource path="res://scripts/options_menu.gd" type="Script" id=2]

[node name="menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="menu" type="Sprite" parent="."]
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 1 )

[node name="sfx_text" type="RichTextLabel" parent="."]
margin_left = -66.0001
margin_top = 38.0
margin_right = 30.9999
margin_bottom = 78.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Effects Volume"

[node name="music_text" type="RichTextLabel" parent="."]
margin_left = -68.0001
margin_top = -76.0
margin_right = 28.9999
margin_bottom = -36.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Music Volume"

[node name="music_slider" type="HSlider" parent="."]
margin_left = -103.0
margin_top = -53.0
margin_right = 0.999939
margin_bottom = -37.0
rect_scale = Vector2( 2, 2 )

[node name="sfx_slider" type="HSlider" parent="."]
margin_left = -102.0
margin_top = 64.0
margin_right = 1.99994
margin_bottom = 80.0
rect_scale = Vector2( 2, 2 )

[node name="mute_checkbox" type="CheckBox" parent="."]
margin_left = -108.0
margin_top = 167.0
margin_right = -47.0001
margin_bottom = 191.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Mute"

[node name="back_button" type="Button" parent="."]
margin_left = 4.99994
margin_top = 166.0
margin_right = 87.9999
margin_bottom = 186.0
rect_scale = Vector2( 2, 2 )
text = "Main Menu"

[connection signal="value_changed" from="music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="sfx_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="mute_checkbox" to="." method="_on_mute_checkbox_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
